--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
             <li><a href="#projects">Projects</a></li>
         </ul>
     </nav>
-
+	<img alt="">
     <script type="text/javascript" src="./script.js">
 </script>
 
